Increased initial padding of the selectable word. When you select words they will no longer add additional padding and make them "jump".

--- a/mark-the-words.css
+++ b/mark-the-words.css
@@ -25,12 +25,6 @@
   padding: 1em;
 }
 
-.h5p-word-selectable-words {
-  margin-bottom: 0.8em;
-  margin-top: 0.8em;
-  line-height: 2em;
-}
-
 /* Actual text paragraphs */
 .h5p-word .h5p-word-inner p {
   font-size: 1em;
@@ -171,13 +165,39 @@
   border-color: transparent;
   border-right-color: #ffffff;
 }
+/* SELECTABLE WORDS STYLING */
+/* Selectable words container */
+.h5p-word-selectable-words {
+  margin-bottom: 0.8em;
+  margin-top: 0.8em;
+  line-height: 2em;
+}
+/* Selectable words*/
+.h5p-word-selectable {
+  padding: 0.15em 0.15em 0.15em 0.15em;
+  border-radius: 0.4em;
+  cursor: pointer;
+}
+/* Colors and styling for word selections */
+.h5p-word .h5p-word-selected {
+  background: #cee0f4;
+}
+/* Missed word*/
+.h5p-word-missed {
+  border: 0.1em #2c76c0 dashed;
+}
 /* Correctly answered marking */
 .h5p-word .h5p-word-correct{
-  padding: 0.15em 0.5em 0.15em 0.5em;
-  border-radius: 0.8em;
   background: #d1e2ce;
   color: #39692e;
 }
+/* Wrongly answered marking */
+.h5p-word .h5p-word-wrong {
+  background-color: #e6ced1;
+  color: #c33f62;
+  text-decoration: line-through;
+}
+/* Feedback icons */
 .h5p-word .h5p-word-correct:after {
   position: relative;
   right: 0.1em;
@@ -186,14 +206,6 @@
   font-family: 'H5PFontAwesome4';
   color: #39692e;
   padding-left: 0.75em;
-}
-/* Wrongly answered marking */
-.h5p-word .h5p-word-wrong {
-  padding: 0.15em 0.5em 0.15em 0.5em;
-  border-radius: 0.8em;
-  background-color: #e6ced1;
-  color: #c33f62;
-  text-decoration: line-through;
 }
 .h5p-word .h5p-word-wrong:after {
   position: relative;
@@ -218,19 +230,4 @@
 }
 button.h5p-retry-button.h5p-retry-button {
   display: none;
-}
-
-/* Colors and styling for word selections */
-.h5p-word .h5p-word-selected {
-  padding: 0.15em 0.5em 0.15em 0.5em;
-  border-radius: 0.8em;
-  background: #cee0f4;
-}
-.h5p-word-missed {
-  padding: 0.15em 0.5em 0.15em 0.5em;
-  border-radius: 0.8em;
-  border: 0.1em #2c76c0 dashed;
-}
-.h5p-word-selectable {
-  cursor: pointer;
 }
